Fix up the intro page

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -13,26 +13,29 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 ## What is Hisyëö?
 
-A constructed language for people around the world to communicate with each
-other. Hisyëö is designed using these principles:
+A small language for people around the world to communicate with each other
+about big ideas.  Hisyëö was designed using these principles:
 
 ### Neutrality
 Words are sourced from all world languages proportional to the square root of
-their world population of L1 speakers. Many people who would come to learn
-Hisyëö may have a small anchor of familiarity within the lexicon.
+their world population of [L1
+speakers](https://en.wikipedia.org/wiki/First_language). Many people who come to
+learn Hisyëö have a small anchor of familiarity within the lexicon. It also is
+meant to symbolize our sacred bond to our collective linguistic heritage. 
 
-Additionally, the grammar is considered an analytic isolating language like its
-forebears [Kokanu](https://www.kokanu.com/) and [Toki
-Pona](https://tokipona.org). Analytic isolating languages like these remove the
-mutation of words by making grammatical syntax separate particle words. While
-this might be different to how some people are used to, it reduces the amount of
-learning needed for proficiency.
+Additionally, the grammar is an analytic isolating language like its forebears
+[Kokanu](https://www.kokanu.com/) and [Toki Pona](https://tokipona.org).
+Analytic isolating languages remove the mutation of words by making grammatical
+syntax separate particle words. Alternatively, many languages mutate or attach
+lexemes to root words in order to achieve similar grammatical means.
 
-The grammar provides more functionality than some minimalist languages and
-certain conventions are established to ensure the language can be a more
-functional replacement of a natural language. This does add complexity and
-reduces the neutrality but it also reduces ambiguity and increases both
-succinctness and expressivity.
+It is the belief of the creators of this language that there's no one system
+that can reflect all ways of thinkings, be sufficiently comprehensible, and be
+easy to teach. So a complete moderately-naturalistic system was developed that
+improves expressiveness at the cost of some amount of neutrality. However, since
+the grammar provides more functionality and conventions than some minimalist
+languages, Hisyëö is able to reduce ambiguity which the creators of the language
+believe to be a second-order form of neutrality.
 
 ### Succinctness
 Words are kept to a minimum where possible but information density is strongly
@@ -45,15 +48,16 @@ comprehension due to the added working memory to develop an understanding of the
 sentence.
 
 Careful consideration is made that the semantic spaces that each individual word
-covers do not overlap other words although there will be times where you can
-build a similar concept by using compound phrases and this is okay and provides
-users with additional ways to clarify their intended meaning.
+covers do not overlap other words although there are often more verbose ways to
+explain many of the words which can aid in clarifying intended meaning and
+allows for a clear Hisyëö to Hisyëö dictionary.
 
 
 ### Expressivity
 The language is designed to be highly expressive in its word and grammar
-choices. With just over 840 words, there's a lot more ways to express feelings,
-emotions, objects, actions and anything else you can think of.
+choices. With just over 840 words, there's a lot more ways (compared to
+minimalist languages) to express feelings, emotions, objects, actions and
+anything else you can think of.
 
 Additionally, the grammar has been greatly enhanced from its origin to allow for
 handling of tense, aspect, mood, causation, and volition. The language has been
@@ -62,15 +66,15 @@ too challenging or too verbose to express.
 
 ## Is Hisyëö An International Auxiliary Language?
 
-Some of these principles and the language features that you will learn may seem
-contrary to the practices of any self-respecting [International Auxiliary
-Language](http://interlanguages.net). Hisyëö does not strictly follow the
-tradional principles (and isn't seeking to fit in any kind of IAL-shaped box).
-The creators believe that too much effort within IAL development is spent on
-regularization and cherrypicking existing lexical and grammatical tactics of
-natural languages (while applying some first language bias regardless of the
-best intentions). Instead, Hisyëö pushes closer to an
-[artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
+Some of these principles, the orthography and grammatical features that you will
+learn may seem contrary to the practices of any self-respecting [International
+Auxiliary Language](http://interlanguages.net). Hisyëö **does not** strictly
+follow the tradional principles (and isn't seeking to fit in any kind of
+IAL-shaped box). The creators of the language believe that too much effort
+within IAL development is spent on regularization and cherrypicking existing
+lexical and grammatical tactics of natural languages (while applying some first
+language bias regardless of the best intentions). Instead, Hisyëö pushes closer
+to an [artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
 [loglang](https://loglangs.wiki/Portal) by focusing less on the linguistic
 equivalent of [code golf](https://en.wikipedia.org/wiki/Code_golf) and instead
 striving for a more complete "batteries-included" language.
@@ -83,11 +87,12 @@ translations of popular media, scientific papers and philosophical treateses.
 Unfortunately for him, the Kokanu community intends the language to be as
 minimalist as possible and so the density of information when translating is not
 a consideration. Neither translation of media nor scientific communication are
-goals of the language. Having spent considerable time becoming fluent in Kokanu
-and being inspired by an—at the time—new kokanido
-([koanu](https://www.parallax.net.nz/x/koanu/)), this Kokanu
-community member decided to try to create his own kokanido, enhancing it with
-some ideas taken from other constructed and natural languages.
+goals of the language. This community member spent considerable time becoming
+fluent in Kokanu and enjoyed the grammatical foundation that it offered. He was
+inspired by an at-the-time new kokanido
+([koanu](https://www.parallax.net.nz/x/koanu/)) and decided to try to create his
+own kokanido, enhancing it with some ideas taken from other constructed and
+natural languages.
 
 ## The Basics
 
@@ -113,11 +118,11 @@ write a few basic sentences.
 - k as in **c**up or sti**ck**
 - g as in **g**old or sna**g**
 - t as in **t**ip or pu**tt**
-- z as in **ch**ore or na**t**ure
+- c as in **ch**ore or na**t**ure
 - s as in mi**s**t or i**c**e
 - x as in a**sh** or ra**t**ion
 - d as in **d**ig or ba**d** 
-- ȷ as in **j**og or a**g**e
+- z as in **j**og or a**g**e
 - p as in **p**oke or si**p**
 - v as in **v**alid or ga**v**el
 - m as in la**m**b or **m**ineral
@@ -135,7 +140,7 @@ write a few basic sentences.
 3. There are no definiteness articles like "the" or "a/an".
 4. The basic structure of a sentence is any amount of phrasal constituents
    introduced by prepositions (thematic phrases) or verbs (object phrases).
-5. If the agent/experiencer phase is placed as the first constituent of a
+5. If the agent/experiencer phrase is placed as the first constituent of a
    sentence, then the particle that introduces the phrase can be omitted.
 
 ### Usage
