--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -15,7 +15,7 @@ What is this language and how do you pronounce it?
 ## World Language
 
 Hisyëö is a *world* language and *art* language that attempts to create a
-batteries-included opinionated platform for cross-cultural expression.
+batteries-included opinionated platform for cultural expression.
 
 It takes words from all of the world's families of languages so that there is a
 little of everyone's language within it. Each language family gets a
@@ -24,8 +24,10 @@ percentage of the total of the square roots of recent counts of the L1
 population speakers of each language. By using a square root distribution, the
 larger language families have a reduced proportion and the lesser families have
 a slightly increased proportion. These amounts are considered a tolerance marker
-and each family will fluctuate between position and negative offsets from the
+and each family fluctuates between position and negative offsets from the
 tolerance amount.
+
+![Word Proportions](../../static/word_proportions_large.png)
 
 This principle allows Hisyëö to have a representation of as many people as
 possible. Since the larger language families get a large amount of words due to
