Fix "and" in all docs

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -300,7 +300,7 @@ WIP Translation
 
 <HisyeoTabs>
   <p>yünyoü son dus lono ü wuto eson,</p>
-  <p>wuto nonkü, wuto toü, moliyü wuto önsu,</p>
+  <p>wuto nonkü, wuto toü, ün wuto önsu,</p>
   <p>ü möi dizel yünyoü son dus kut,</p>
   <p>ü yök wuto düi do lon düi dus tukwos lono,</p>
   <p>lëkın hoi üsën zoston do di hoi xokön üsën nonkü,</p>
@@ -381,7 +381,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='latin'>noi Lovoiyel, nimü yünyoü mikdol zık yë sıskın.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='latin'>noyo yünyoü düi sıskın moskül moliyü kut sıskın wohi.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>noyo yünyoü düi sıskın moskül ün kut sıskın wohi.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd><HisyeoText kind='latin'>niün lı nokdo zık.</HisyeoText></dd>
@@ -389,10 +389,10 @@ to return to the main sentence clause for the remaining consituents.
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='latin'>sıskın wohi noyo Somonvo lı önsu üsën .</HisyeoText></dd>
         <dd><em>My sister Samantha is 11 years old.</em></dd>
-        <dd><HisyeoText kind='latin'>lı zıyön üsën moliyü düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>lı zıyön üsën ün düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
         <dd><em>My brother's ages are 14 and 21.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>ün lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='latin'>lono düi dus eson yë wuto toü.</HisyeoText></dd>
@@ -405,7 +405,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='abugida'>noi Lovoiyel, nimü yünyoü mikdol zık yë sıskın.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='abugida'>noyo yünyoü düi sıskın moskül moliyü kut sıskın wohi.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>noyo yünyoü düi sıskın moskül ün kut sıskın wohi.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd><HisyeoText kind='abugida'>niün lı nokdo zık.</HisyeoText></dd>
@@ -413,10 +413,10 @@ to return to the main sentence clause for the remaining consituents.
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='abugida'>sıskın wohi noyo Somonvo lı önsu üsën .</HisyeoText></dd>
         <dd><em>My sister Samantha is 11 years old.</em></dd>
-        <dd><HisyeoText kind='abugida'>lı zıyön üsën moliyü düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>lı zıyön üsën ün düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
         <dd><em>My brother's ages are 14 and 21.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>ün lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='abugida'>lono düi dus eson yë wuto toü.</HisyeoText></dd>
@@ -567,7 +567,7 @@ milligrams.
 > —Casey Seiden, Verywell Health, 3 May 2024
 
 <HisyeoTabs>
-  <p>pı nulto pësnëhot vos umo dës xonluk mokon zöhün doi gıtno dus tiü moliyü son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı püzök onö</p>
+  <p>pı nulto pësnëhot vos umo dës xonluk mokon zöhün doi gıtno dus tiü ün son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı püzök onö</p>
 </HisyeoTabs>
 
 ### Length/Width/Height
