--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -157,7 +157,7 @@ noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
     <p>motüo wohi noyo pı xokön düi diyondë hön do pı elentët lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
-    <p>lı sonkon ü do pesol zınkon, moliyü pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
+    <p>lı sonkon ü do pesol zınkon, ün pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
     <p>lolü nimü oncëmon ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
 
