--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -222,7 +222,7 @@ entry](https://en.wiktionary.org/wiki/for).
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
   <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
-  <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu moliyü Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu ün Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
   <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
@@ -230,11 +230,11 @@ entry](https://en.wiktionary.org/wiki/for).
   <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü.&emsp;<em>All those for the motion, raise your hands.</em></p>
   <p>zık oxon mozün pukü.&emsp;<em>Who's for ice-cream?</em></p>
   <p>noyo oxon do lı lö vio oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
-  <p>dus göcidon si oxon moliyü son dën.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
+  <p>dus göcidon si oxon ün son dën.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
-  <p>niün moskül pit köto yök vos niün zütö nı, moliyü nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
+  <p>niün moskül pit köto yök vos niün zütö nı, ün nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
   <p>niün lı xoinpo pı dëko pı xön eswen nënko do nocido si pügot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
   <p>noyo süko niün nënko ëto mötivö.&emsp;<em>I like her for lots of reasons.</em></p>
 </HisyeoTabs>
@@ -332,7 +332,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>niün gomi si woküt kon wëloı do gıtno lono moliyü pıtün, oxon vos niün köi döstoc eswen woküt otıkon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
+  <p>niün gomi si woküt kon wëloı do gıtno lono ün pıtün, oxon vos niün köi döstoc eswen woküt otıkon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
