--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -84,7 +84,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
     <p>nü köi puswen vın do lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nimü köi tenkin ulyö ko.&emsp;<em>Can you hear that?</em></p>
-    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, moliyü Döic.&emsp;<em>She can speak English, French, and German.</em></p>
+    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, ün Döic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
 
 #### Conditional (*what would be*)
